gap fix

--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -33,7 +33,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 2.6rem;
+  gap: 2rem;
   margin-bottom: 3rem;
 }
 #logo-lacoste {
